Refactor in course of all-spark line-by-line review

--- a/scripts/alpine/3.7/texlive/artifacts/texlive-check.tex
+++ b/scripts/alpine/3.7/texlive/artifacts/texlive-check.tex
@@ -1,10 +1,7 @@
 \documentclass{article}
-
 \usepackage[american]{babel}
 \usepackage{blindtext}
-
 \begin{document}
-
-\blindmathpaper
-
+\blindmathtrue
+\Blinddocument
 \end{document}
